[gd_scene load_steps=4 format=3 uid="uid://bbkwh4flwl47u"]

[ext_resource type="Script" uid="uid://dtphj0d0bpif2" path="res://script/ui_part/menu_village.gd" id="1_ylbfw"]
[ext_resource type="Texture2D" uid="uid://b8tc344ldgexy" path="res://image/arrow.png" id="2_gd7jg"]
[ext_resource type="Script" uid="uid://ca80720yn53pf" path="res://script/ui_part/arrow_menu_village.gd" id="3_w3u8o"]

[node name="MenuVillage" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ylbfw")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 320.0
offset_top = 200.0
offset_right = 960.0
offset_bottom = 520.0

[node name="TextPaused" type="Label" parent="."]
layout_mode = 0
offset_left = 344.0
offset_top = 217.0
offset_right = 594.0
offset_bottom = 262.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "Paused"

[node name="TextResume" type="Label" parent="."]
layout_mode = 0
offset_left = 344.0
offset_top = 297.0
offset_right = 594.0
offset_bottom = 342.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "Resume"

[node name="TextExit" type="Label" parent="."]
layout_mode = 0
offset_left = 344.0
offset_top = 377.0
offset_right = 594.0
offset_bottom = 422.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "Exit to title"

[node name="TextQuit" type="Label" parent="."]
layout_mode = 0
offset_left = 344.0
offset_top = 457.0
offset_right = 594.0
offset_bottom = 502.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "Quit"

[node name="Arrow" type="Sprite2D" parent="."]
position = Vector2(240, 280)
texture = ExtResource("2_gd7jg")
centered = false
script = ExtResource("3_w3u8o")
